<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registration_Successful_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/thirty"
            android:src="@drawable/right_tick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/five"
            android:text="@string/registration_successful"
            android:textColor="#000"
            android:textSize="@dimen/twenty_text" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginTop="@dimen/eighteen_text"
            android:layout_marginRight="@dimen/fifty"
            android:background="@drawable/back_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginRight="@dimen/fifty"
            android:background="@drawable/back_edittext"
            android:clickable="false"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_text" />

        <ImageView
            android:layout_width="@dimen/forty"
            android:layout_height="@dimen/forty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:src="@drawable/smartphone_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:text="+919876543210"
            android:textColor="#000"
            android:textSize="@dimen/eighteen_text" />

        <ImageView
            android:layout_width="@dimen/forty"
            android:layout_height="@dimen/forty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:src="@drawable/web_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:text="@string/company_website"
            android:textColor="@color/blue"
            android:textSize="@dimen/twenty_text" />

        <ImageView
            android:layout_width="@dimen/forty"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:src="@drawable/company_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ten"
            android:text="@string/company_location"
            android:textColor="#000"
            android:textSize="@dimen/fifteen_text" />
    </LinearLayout>
</ScrollView>