<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.user.newspapervendor.activities.ForgotPasswordPage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred"
            android:layout_gravity="center"
            android:text="@string/change_your_password"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:padding="@dimen/thirty"
            android:layout_marginLeft="0dp"
            android:background="@color/btn_text_color_dark_blue"
            android:textSize="@dimen/twenty_five_text" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                android:textStyle="bold"
                android:inputType="phone"
                android:textColorHint="@color/btn_text_color_dark_blue"
                android:textColor="@color/btn_text_color_dark_blue"
                android:textSize="@dimen/Sixteen_text" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_get_otp"
            android:layout_width="@dimen/one_fifty"
            android:layout_height="@dimen/fifty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/back_button"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_text" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              android:textStyle="bold"
                android:inputType="phone"
                android:hint="@string/enter_otp"
                android:textColorHint="@color/btn_text_color_dark_blue"
                android:textColor="@color/btn_text_color_dark_blue"
                android:textSize="@dimen/Sixteen_text" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_verify"
            android:layout_width="@dimen/one_fifty"
            android:layout_height="@dimen/fifty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/back_button"
            android:text="Verify"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_text" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:inputType="phone"
                android:hint="@string/enter_new_password"
                android:textColorHint="@color/btn_text_color_dark_blue"
                android:textColor="@color/btn_text_color_dark_blue"
                android:textSize="@dimen/Sixteen_text" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_save_password"
            android:layout_width="@dimen/one_fifty"
            android:layout_height="@dimen/fifty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/back_button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_text" />
    </LinearLayout>
</ScrollView>